Include public link to presentation

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           <p>
             <small>Created by <a href="http://timbuckley.github.io">Tim Buckley</a></small>
           </p>
+          <small>(<a href="http://timbuckley.github.io/react-native-presentation">public link</a>)</small>
         </section>
 
         <!-- Table of contents -->
