Include official name for ES6; refer to Babel

--- a/index.html
+++ b/index.html
@@ -82,12 +82,13 @@
         <section>
           <!-- ES6: Main -->
           <section>
-            <h2 style="color: #ff2c2d;">ES6</h2>
+            <h2 style="color: #ff2c2d;">Ecmascript 2015 (ES6)</h2>
             <ul>
               <li class="fragment">Next version of JavaScript</li>
               <li class="fragment">All of ES5 (current JavaScript) works in ES6</li>
               <li class="fragment">Mostly just syntax sugar - can do everything in plain ES5</li>
               <li class="fragment">Works out of the box in React Native</li>
+              <li class="fragment">Other environments use <a href="https://babeljs.io/repl/">Babel</a></li>
             </ul>
           </section>
 
