Add silly global mutable state gif

--- a/index.html
+++ b/index.html
@@ -648,6 +648,16 @@ function itemsReducer(state = initialState, action = {}) {
             </code></pre>
           </section><!-- Reducers -->
 
+          <!-- But...Why not just change the state directly? -->
+          <section>
+            <p>But... Why not just change the state directly?</p>
+          </section><!-- But...Why not just change the state directly? -->
+
+          <!-- Global Mutable State gif -->
+          <section data-background="https://media.tenor.co/images/64ede15b6c61b14739f90b9e8f76bd46/tenor.gif" class="present" data-background-image="http://i.giphy.com/90F8aUepslB84.gif" style="top: 280px; display: block;">
+            <h2>Global Mutable State === BAD</h2>
+          </section><!-- Global Mutable State gif -->
+
           <!-- Tim's Gliffy Diagram -->
           <section>
              <img src="http://i.imgur.com/3ZIphJh.png">
