--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 
     <title>DNA Mobile App: Tech</title>
 
-    <meta name="description" content="Understanding ES6, React, React Native, & Redux">
     <meta name="author" content="Tim Buckley">
+
+    <meta property="og:title" content="DNA Mobile App: Tech" />
+    <meta property="og:description" name="description" content="Understanding ES6, React, React Native, & Redux">
+    <meta property="og:url" content="https://timbuckley.github.io/react-native-presentation/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://fluffyclouds.dnainfo.com/img/app/20161026-app-promotion/iphones%401x.png" />
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
