--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <head>
     <meta charset="utf-8">
 
-    <title>DNA Mobile App: Tech</title>
+    <title>DNAinfo Mobile App: Tech</title>
 
     <meta name="author" content="Tim Buckley">
 
-    <meta property="og:title" content="DNA Mobile App: Tech" />
+    <meta property="og:title" content="DNAinfo Mobile App: Tech" />
     <meta property="og:description" name="description" content="Understanding ES6, React, React Native, & Redux">
     <meta property="og:url" content="https://timbuckley.github.io/react-native-presentation/" />
     <meta property="og:type" content="website" />
@@ -49,7 +49,7 @@
       <!-- Main -->
       <div class="slides">
         <section>
-          <h1>DNA Mobile App</h1>
+          <h1>DNAinfo Mobile App</h1>
           <h3>Understanding ES6, React, React Native, & Redux</h3>
           <p>
             <small>Created by <a href="http://timbuckley.github.io">Tim Buckley</a></small>
